# arrow

./: .gitignore
ci/docker/: ubuntu-23.10-cpp.dockerfile
cpp/: CMakePresets.json
cpp/src/arrow/ipc/: message.cc  message.h  read_write_test.cc  reader.cc  reader.h
cpp/src/gandiva/: CMakeLists.txt  engine.h  to_date_holder_test.cc
cpp/src/gandiva/tests/: micro_benchmarks.cc  projector_test.cc  test_util.cc
dev/tasks/linux-packages/apache-arrow/apt/ubuntu-jammy/: Dockerfile
gandiva_pandas/: Makefile  pyproject.toml
gandiva_pandas/gandiva_pandas/: __init__.py  ast_parser.py  llvm_gandiva_visitor.py
gandiva_pandas/tests/: test_dump_ir.py  test_gandiva.py
python/: Dockerfile  docker-compose.yml
python/examples/minimal_build/: Dockerfile.ubuntu  build_venv.sh
